# qwertycoin-zero

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CryptoNoteWallet.cmake  README.md  cryptonote
include/: IAddressBookManager.h  IApplicationEventHandler.h  IBlockChainExplorerAdapter.h  INewsReader.h  (+5 more)
src/: CMakeLists.txt  CryptoNoteWalletConfig.h.in  main.cpp  miniupnpcstrings.h  qwertycoinwallet.desktop  qwertycoinwallet.qss  qwertycoinwallet.rc  qwertycoinwallet.sh  resources.qrc  version.h.in
src/Application/: AddressBookManager.cpp  AddressBookManager.h  CommandLineParser.cpp  CommandLineParser.h  IWalletUiItem.h  LogFileWatcher.cpp  LogFileWatcher.h  OptimizationManager.cpp  OptimizationManager.h  SignalHandler.cpp  SignalHandler.h  WalletApplication.cpp  WalletApplication.h  WalletSplashScreen.cpp  WalletSplashScreen.h
src/CryptoNoteWrapper/: BlockChainExplorerAdapter.cpp  BlockChainExplorerAdapter.h  BlockChainExplorerWorker.cpp  BlockChainExplorerWorker.h  CommonNodeAdapter.cpp  CommonNodeAdapter.h  CryptoNoteAdapter.cpp  CryptoNoteAdapter.h  DeterministicWalletAdapter.cpp  DeterministicWalletAdapter.h  GuardExecutor.cpp  GuardExecutor.h  ProxyRpcNodeAdapter.cpp  ProxyRpcNodeAdapter.h  ProxyRpcNodeWorker.cpp  ProxyRpcNodeWorker.h  SemaphoreUtils.cpp  SemaphoreUtils.h  WalletGreenAdapter.cpp  WalletGreenAdapter.h  WalletGreenWorker.cpp  WalletGreenWorker.h
src/Gui/AddressBook/: AddressBookDelegate.cpp  AddressBookDelegate.h  AddressBookFrame.cpp  AddressBookFrame.h  DonationColumnDelegate.cpp  DonationColumnDelegate.h  NewAddressDialog.cpp  NewAddressDialog.h  NewAddressDialog.ui  ui_NewAddressDialog.h
src/Gui/BlockchainExplorer/: BlockDetailsDialog.cpp  BlockDetailsDialog.h  BlockExplorerFrame.cpp  BlockExplorerFrame.h  FilteredBlockModel.cpp  FilteredBlockModel.h  TransactionsBlockModel.cpp  TransactionsBlockModel.h  WindowedBlockModel.cpp  WindowedBlockModel.h
src/Gui/Common/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddressBookDialog.cpp  AddressBookDialog.h  BalanceProofDialog.cpp  BalanceProofDialog.h  BalanceProofDialog.ui  BlockchainInstaller.cpp  BlockchainInstaller.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ClearableLineEdit.cpp  ClearableLineEdit.h  CopyColumnDelegate.cpp  CopyColumnDelegate.h  CopyMagicLabel.cpp  CopyMagicLabel.h  ExitWidget.cpp  ExitWidget.h  ExitWidget.ui  GlassFrame.cpp  GlassFrame.h  KeyDialog.cpp  KeyDialog.h  KeyDialog.ui  LinkLikeColumnDelegate.cpp  LinkLikeColumnDelegate.h  MagicLabel.cpp  MagicLabel.h  MnemonicDialog.cpp  MnemonicDialog.h  MnemonicDialog.ui  NewPasswordDialog.cpp  NewPasswordDialog.h  NewTransactionDelegate.cpp  NewTransactionDelegate.h  NewsFrame.cpp  NewsFrame.h  OpenUriDialog.cpp  (+65 more)
src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  WalletStatusBar.cpp  WalletStatusBar.h  ui_MainWindow.h
src/Gui/NoWallet/: NoWalletFrame.cpp  NoWalletFrame.h  NoWalletFrame.ui  ui_NoWalletFrame.h
src/Gui/Options/: ConnectionOptionsFrame.cpp  ConnectionOptionsFrame.h  ConnectionOptionsFrame.ui  DonationAddressesModel.cpp  DonationAddressesModel.h  DonationOptionsFrame.cpp  DonationOptionsFrame.h  DonationOptionsFrame.ui  IOptionsPage.h  OptimizationOptionsFrame.cpp  OptimizationOptionsFrame.h  OptimizationOptionsFrame.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  ui_ConnectionOptionsFrame.h  ui_DonationOptionsFrame.h  ui_OptimizationOptionsFrame.h  ui_OptionsDialog.h
src/Gui/Overview/: OverviewFrame.cpp  OverviewFrame.h  OverviewFrame.ui  OverviewHeaderFrame.cpp  OverviewHeaderFrame.h  OverviewHeaderFrame.ui  OverviewHeaderGlassFrame.cpp  OverviewHeaderGlassFrame.h  OverviewTransactionPoolModel.cpp  OverviewTransactionPoolModel.h  OverviewTransactionPoolTreeView.cpp  OverviewTransactionPoolTreeView.h  RecentTransactionsModel.cpp  RecentTransactionsModel.h  ui_OverviewFrame.h  ui_OverviewHeaderFrame.h
src/Gui/Receive/: ReceiveFrame.cpp  ReceiveFrame.h  ReceiveFrame.ui  ui_ReceiveFrame.h
src/Gui/Send/: AddressProvider.cpp  AddressProvider.h  SendFrame.cpp  SendFrame.h  SendFrame.ui  SendGlassFrame.cpp  SendGlassFrame.h  TransferFrame.cpp  TransferFrame.h  TransferFrame.ui  ui_SendFrame.h  ui_TransferFrame.h
src/Gui/Transactions/: DrawableTransfersModel.cpp  DrawableTransfersModel.h  FilteredByAddressTransactionsModel.cpp  FilteredByAddressTransactionsModel.h  FilteredByAgeTransactionsModel.cpp  FilteredByAgeTransactionsModel.h  FilteredByHashTransactionsModel.cpp  FilteredByHashTransactionsModel.h  FilteredByPeriodTransactionsModel.cpp  FilteredByPeriodTransactionsModel.h  FilteredTransactionsModel.cpp  FilteredTransactionsModel.h  TransactionTransfersRenderer.cpp  TransactionTransfersRenderer.h  TransactionsDelegate.cpp  TransactionsDelegate.h  TransactionsFrame.cpp  TransactionsFrame.h
src/Models/: AddressBookModel.cpp  AddressBookModel.h  BlockchainModel.cpp  BlockchainModel.h  FusionTransactionsFilterModel.cpp  FusionTransactionsFilterModel.h  NodeModel.cpp  NodeModel.h  NodeStateModel.cpp  NodeStateModel.h  SortedAddressBookModel.cpp  SortedAddressBookModel.h  SortedTransactionsModel.cpp  SortedTransactionsModel.h  TransactionPoolModel.cpp  TransactionPoolModel.h  TransactionsModel.cpp  TransactionsModel.h  TransfersModel.cpp  TransfersModel.h  WalletStateModel.cpp  WalletStateModel.h
src/OpenAlias/: DnsLookup.cpp  DnsLookup.h
src/Platform/Linux/: ApplicationEventHandler.h
src/Platform/OSX/: ApplicationEventHandler.mm  INotificationMonitorObserver.h  NotificationMonitor.h  NotificationMonitor.mm  WalletApplication.mm
src/Platform/Windows/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
src/QJsonRpc/: JsonRpcNotification.cpp  JsonRpcNotification.h  JsonRpcObject.cpp  JsonRpcObject.h  JsonRpcObjectFactory.cpp  JsonRpcObjectFactory.h  JsonRpcRequest.cpp  JsonRpcRequest.h  JsonRpcResponse.cpp  JsonRpcResponse.h  JsonRpcServer.cpp  JsonRpcServer.h
src/Settings/: Settings.cpp  Settings.h
src/Style/: DarkStyle.cpp  DarkStyle.h  LightStyle.cpp  LightStyle.h  Style.cpp  Style.h
src/WalletLogger/: WalletLogger.cpp  WalletLogger.h
(+18 files in other folders)
